add docker (work norm, without tests)